--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ $default-branch ]
-  schedule:
-    - cron: $cron-weekly
+ # schedule:
+ #   - cron: $cron-weekly
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 permissions:
